# scratch-python

./: .gitignore  README.md
USDA Nutritional Database/: USDA Nutritional Database.sln
blog-rest-api/: .gitignore  pyproject.toml
blog-rest-api/aioodm/: __init__.py  document.py  errors.py  fields.py  queryset.py  utils.py
blog-rest-api/blog_rest_api/: server.py
blog-rest-api/blog_rest_api/config/: __init__.py
blog-rest-api/blog_rest_api/controllers/: __init__.py  auth_controller.py  comment_controller.py  document_controller.py  post_controller.py  user_controller.py
blog-rest-api/blog_rest_api/initialisation/: __init__.py  controller_configuration.py  mongo_initialization.py
blog-rest-api/blog_rest_api/models/: __init__.py  comments.py  permissions.py  posts.py  users.py
blog-rest-api/blog_rest_api/utils/: __init__.py  json.py  struct.py  web_urldispatcher.py
blog-rest-api/examples/aioomd_examples/: crud.py  models.py
blog-rest-api/examples/jwt_examples/: __init__.py
blog-rest-api/examples/model_examples/: example1.py
blog-rest-api/examples/other_examples.py/: classes.py  dates.py
blog-rest-api/tests/: test_blog_rest_api.py
blog-rest-api/tests/test_aioomd/: conftest.py  models.py  test_document.py  test_document_inheritance.py  test_errors.py  test_fields.py  test_queryset.py  test_utils.py
jetblack-cpumon/: README.md  pyproject.toml
jetblack-cpumon/jetblack_cpumon/: app.py  cpumon.html  cpumon.py  cpumon2.py  cpumon_controller.py  cpumon_service.py  service.py
jetblack-cpumon/tests/: test_cpumon 2.py  test_cpumon.py  test_placeholder.py
(+347 files in other folders)
