[tool.poetry]
name = "jetblack-cpumon"
version = "0.1.0"
description = "A CPU monitor for Linux"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
repository = "https://github.com/rob-blackbourn/jetblack-cpumon"
license = "Apache-2.0"
readme = "README.md"
packages = [ { include = "jetblack_cpumon" } ]

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.4.0"
pytest-asyncio = "^0.10.0"
bareasgi = "^3.4"
uvicorn = "^0.10.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4"
mypy = "^0.740.0"
rope = "^0.14.0"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
